# ml-physics-experiments

./: .editorconfig  .gitignore  README.md  main.py  pyproject.toml
cream/: network.py  simple_1d.py
experiments/1d_free_fall_with_drag/: physics.py
testing/baseball/: baseball_freefall.py
