[tool.poetry]
name = "ml-physics-experiments"
version = "0.1.0"
description = ""
authors = ["CD Clark III <clifton.clark@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_physics_experiments"}]

[tool.poetry.dependencies]
python = "^3.10"
pint = "^0.23"
numpy = "^1.26.4"
scipy = "^1.12.0"
torch = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
