[tool.poetry]
name = "cream"
version = "0.0.0"
description = ""
authors = ["CD Clark III <clifton.clark@gmail.com>", "Kaleb Brunhoeber <kxbrunhoeber2@mail.fhsu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pint = "^0.23"
numpy = "^1"
scipy = "^1"
torch = "^2"
click = "^8"
pandas = "^2"

[tool.poetry.group.dev.dependencies]
mypy = "^1"
pandas-stubs = "^2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
